--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@ body {
     font-family: Roboto, Arial, sans-serif;
     letter-spacing: 0;
     background-color: #F1F3F6;
+    width: 100%;
 }
 
 h1,
@@ -48,9 +49,9 @@ h6 {
 }
 
 .explore {
-    font-size: 12px;
+    font-size: 11px;
     font-style: italic;
-    margin-top: -1px;
+    margin-top: -4px;
     color: #fff;
     text-decoration: none;
     border: none;
@@ -106,17 +107,17 @@ ul li a {
     outline: none;
 }
 
+.header-image {
+    background-color: #fff;
+    min-height: 112px;
+    box-shadow: 0 1px 1px 0 rgb(0 0 0 / 16%);
+}
+
 .image-sort-flex {
     display: flex;
     justify-content: center;
     gap: 70px;
     padding: 10px 0 10px 0;
-}
-
-.header-image {
-    background-color: #fff;
-    min-height: 112px;
-    box-shadow: 0 1px 1px 0 rgb(0 0 0 / 16%);
 }
 
 .header-image img {
