--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1,25 +1,5 @@
-body {
-    margin: 0;
-    padding: 0;
-    font-family: Roboto, Arial, sans-serif;
-    letter-spacing: 0;
-    background-color: #f1f3f6;
-    width: 100%;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    margin: 0;
-}
-
-.container {
-    width: 100%;
-}
-
+@import "./variables";
+@import "./initials";
 @import "./header";
 @import "./headerImage";
 @import "./slides";
