--- a/assets/sass/_headerImage.scss
+++ b/assets/sass/_headerImage.scss
@@ -2,6 +2,8 @@
     background-color: #fff;
     min-height: 112px;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.16);
+    padding-top: 60px;
+    position: relative;
 }
 
 .image-sort-flex {
