--- a/assets/sass/_header.scss
+++ b/assets/sass/_header.scss
@@ -3,13 +3,17 @@
     background-color: #2874f0;
     display: flex;
     justify-content: space-evenly;
+    width: 100%;
+    height: 56px;
+    position: fixed;
+    z-index: 1;
 }
 
 .header-left {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-grow: 5;
+    flex-grow: 6;
     gap: 10px;
 }
 
@@ -34,6 +38,9 @@
     text-decoration: none;
     border: none;
     outline: none;
+    &:hover {
+        text-decoration: underline;
+    }
 }
 
 .explore-yellow {
@@ -63,24 +70,68 @@ input {
     background-color: #fff;
     border-radius: 0 2px 2px 0;
     padding: 4px 12px 0 8px;
+    &:hover {
+        cursor: pointer;
+    }
+}
+
+.list-search {
+    display: none;
+    position: absolute;
+    border-radius: 0 0 2px 2px;
+    border-top: 1px solid #e0e0e0;
+    background-color: #fff;
+    color: #000;
+    z-index: 9;
+    box-shadow: 2px 3px 5px -1px rgba(0, 0, 0, 0.5);
+    overflow: hidden;
+    white-space: nowrap;
+    width: 554.5px;
+    margin-top: -1px;
+    padding-left: 10px;
+    li {
+        list-style: none;
+        padding: 10px 0;
+        .search-list-icon {
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            gap: 10px;
+        }
+        a {
+            text-decoration: none;
+        }
+        .p1 {
+            color: #757575;
+            font-weight: 400;
+        }
+        .p2 {
+            font-size: 12px;
+            padding-top: 4px;
+            color: #2874f0;
+            font-weight: 500;
+        }
+    }
+}
+
+.hide {
+    display: none;
 }
 
 .header-right {
     flex-grow: 4;
-}
-
-ul {
-    display: flex;
-    justify-content: space-evenly;
-    list-style-type: none;
-}
-
-ul li a {
-    color: #fff;
-    font-size: 16px;
-    letter-spacing: 0.1px;
-    font-weight: 500;
-    text-decoration: none;
-    border: none;
-    outline: none;
+    ul {
+        display: flex;
+        justify-content: space-evenly;
+        list-style-type: none;
+    }
+    ul li a {
+        color: #fff;
+        font-size: 16px;
+        letter-spacing: 0.1px;
+        font-weight: 500;
+        text-decoration: none;
+        border: none;
+        outline: none;
+    }
 }
